[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "py-ml-metrics"
version = "0.0.1"
description = "ML-metrics: A library that provides performant and distributed friendly ML metrics implementations."
keywords = []
authors = [
    {name = "ML metrics team", email = "ml-metrics-dev@google.com"},
]
dependencies = [
    'absl-py',
    'cloudpickle',
    'dm-launchpad',
    'immutabledict',
    'numpy',
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
testing = ['dill']

[project.urls]
homepage = "https://github.com/google/ml-metrics"

[tool.setuptools.packages.find]
include = ["ml_metrics*"]
