[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "py-ml-metrics"
version = "0.0.2"
description = "ML-metrics: A library that provides performant and distributed friendly ML metrics implementations."
keywords = []
authors = [
    {name = "ML metrics team", email = "ml-metrics-dev@google.com"},
]
dependencies = [
    'absl-py',
    'cloudpickle',
    'immutabledict',
    'numpy',
    'more-itertools',
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
courier = ['dm-launchpad']
signals = ['pillow']
full = ['dm-launchpad', 'pillow']

[project.urls]
homepage = "https://github.com/google/ml-metrics"

[tool.setuptools.packages.find]
include = ["ml_metrics*"]
